fix the overflow and spacing on testimonials bg

--- a/css/style.css
+++ b/css/style.css
@@ -1193,6 +1193,10 @@ body.thanks-page h1 {
   margin-bottom: 0;
 }
 
+.sparkpay .container {
+  overflow: hidden;
+}
+
 .sparkpay hr {
   width: 300px;
   border-color: #FBBA08;
@@ -1327,13 +1331,10 @@ body.thanks-page h1 {
   background: #FBBA08;
   z-index: 0;
   left: -50vw;
-  top: -20%;
+  top: -10%;
   transform: rotate(14deg);
 }
 
-.sparkpay {
-  overflow-x: hidden;
-}
 
 @media screen and (max-width: 1024px) {
   .caring-adult img {
